Fix collapse

--- a/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
+++ b/htdocs/content/themes/groupe-ct/assets/sass/elements/blocs/_bloc10.scss
@@ -18,8 +18,6 @@
 .product-container {
   position: relative;
   z-index: 1;
-  //width:320px;
-  margin: 80px 0;
   @media (min-width: $screen-sm-min) {
     width:calc(100%/2);
   }
